fix spacing

--- a/docfx/theme/styles/theme.css
+++ b/docfx/theme/styles/theme.css
@@ -186,3 +186,7 @@ body .toc {
     height: 100%;
     border: none;
 }
+
+header.navbar > .container {
+    flex-direction: column;
+}
